<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPantry</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_insert_location">Manage locations</string>
    <string name="expiration_date_format">yyyy-MM-dd</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="set_default">Set Default</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="showcase_list_title">Welcome to your SmartPantry!</string>
    <string name="showcase_list_text">Swipe items to your shopping list and click this button to see your list.</string>
    <string name="showcase_add_title">Add Item</string>
    <string name="showcase_add_text">Add an item by clicking here!</string>
    <string name="showcase_swipe_title">Move to Shopping List</string>

    <!-- Activities label -->
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_insert_item">Insert an item</string>
    <string name="activity_label_edit_item">Edit an item</string>
    <string name="activity_label_manage_locations">Manage locations</string>
    <string name="activity_label_about">About</string>

    <!-- fragment_inventory_list>-->
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- activity_edit_item>-->
    <string name="spinner_item_add_inventory">Add new&#8230;</string>
    <string name="edit_text_item_name_hint">Item Name</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_button_discard">Discard</string>
    <string name="label_item_loc">Location:\u00A0</string>
    <string name="label_item_exp">Expiration:\u00A0</string>
    <string name="expiry_label_filler">YYYY-MM-DD</string>
    <string name="label_item_category">Category:\u00A0</string>
    <string name="showcase_barcode_title">Barcode Scan</string>
    <string name="showcase_barcode_text">Scan an item\'s barcode and next time we\'ll remember what it was</string>
    <string name="showcase_editSwipe_title">Swipe Away</string>
    <string name="showcase_editSwipe_text">Navigate back by swiping right on this view off before any changes are made</string>

    <string-array name="day_left_array">
        <item>Day(s) Left</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
        <item>Pick a date…</item>
    </string-array>
    <string name="label_item_qty">Quantity:</string>
    <string name="dialog_exit_edit_title">Save your changes&#8230;</string>
    <string name="dialog_exit_edit_message">Do you want to save your changes ?</string>
    <string name="dialog_exit_edit_positive">Save</string>
    <string name="dialog_exit_edit_negative">Discard</string>
    <string name="dialog_exit_edit_no_name_title">Your item has no name&#8230;</string>
    <string name="dialog_exit_edit_no_name_message">Your changes will be discarded because your item has no name. Do you want to continue ?</string>
    <string name="dialog_exit_edit_no_name_positive">Discard</string>
    <string name="dialog_exit_edit_no_name_negative">Cancel</string>


    <!-- Edit Locations strings -->
    <string name="add_location_button_text">ADD</string>
    <string name="edit_location_inventory_already_exists">An inventory with this name already exists.</string>

    <!-- Toasts strings -->
    <string name="toast_no_barcode_captured">No barcode captured</string>
    <plurals name="toast_item_moved_to_shopping_list">
        <item quantity="one">%d item moved to your shopping list</item>
        <item quantity="other">%d items moved to your shopping list</item>
    </plurals>
    <plurals name="toast_item_removed">
        <item quantity="one">%d item removed</item>
        <item quantity="other">%d items removed</item>
    </plurals>


    <!-- Notification strings -->
    <string name="notification_content_title_format">Items expiring</string>
    <string name="notification_content_text_format">Some items are expiring soon!</string>
    <string name="notification_inbox_text_format">%s</string>

    <!-- Preferences strings -->
    <string name="pref_category_my_pantry">My Pantry</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_location_edit_summary">Edit your locations</string>
    <string name="pref_location_edit_title">Pantry locations</string>
    <string name="pref_notification_toggle_title">Enable notification</string>
    <string name="pref_notification_toggle_summary">Notify me when an item will expire soon</string>
    <string name="pref_notification_frequency_toggle_summary">Weekly or daily notifications?</string>
    <!-- Alert Dialog-->
    <string name="alert_title_insert">Item Will Not Be Inserted</string>
    <string name="alert_sub_title_insert">This item has no name and will not be inserted, continue?</string>

    <plurals name="alert_delete_inventory_title">
        <item quantity="one">Delete Inventory</item>
        <item quantity="other">Delete inventories</item>
    </plurals>

    <plurals name="alert_delete_inventories_sub_title">
        <item quantity="one">Are you sure you want to delete this inventory ?</item>
        <item quantity="other">Are you sure you want to delete those inventories ?</item>
    </plurals>

    <plurals name="alert_delete_items_title">
        <item quantity="one">Delete Item</item>
        <item quantity="other">Delete Items</item>
    </plurals>

    <plurals name="alert_delete_items_sub_title">
        <item quantity="one">Are you sure you want to delete this item ?</item>
        <item quantity="other">Are you sure you want to delete these items ?</item>
    </plurals>

    <!-- Dialog Edit Location strings -->
    <string name="dialog_edit_location_title">Edit a location</string>
    <string name="dialog_edit_location_hint">Enter a location name&#8230;</string>
    <string name="dialog_edit_location_positive">Save</string>
    <string name="dialog_edit_location_negative">Cancel</string>

    <plurals name="inventory_currently_in_use">
        <item quantity="one">Inventory currently in use</item>
        <item quantity="other">Some inventories currently in use</item>
    </plurals>

    <plurals name="multi_selection_cab_title">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <!--Undo widget-->
    <string name="undo_btn">UNDO</string>

    <!--item dialog-->
    <string name="item_dialog_title">Item is a duplicate</string>
    <string name="item_dialog_sub_title_update_option">The item you are trying to insert is a duplicate.  Would you like to update it or continue editing?</string>
    <string name="item_dialog_sub_title_no_insert">You can not modify an item to match an existing, please update.</string>
    <string name="item_dialog_update">Update</string>
    <string name="item_dialog_edit">Edit</string>
    <string name="item_dialog_ok">OK</string>

    <!--Sub App Bar-->
    <string name="spinner_location_all">All Locations</string>

    <!--about activity-->
    <string name="about_information_text">This app is brought to you by Macadamian Technologies:</string>
    <string name="about_email">smartpantry@macadamian.com</string>
    <string name="about_github">Keep an eye out for our open source v1 release:</string>
    <string name="about_github_url">github.com/Macadamian</string>
    <string name="about_information_libraries">We\'d like to thank:</string>
    <string name="about_dialog_Apache_title">Apache 2.0 License</string>
    <string name="about_dialog_Apache_message_url">\n\n&#160;&#160;You may view the License at \n\n&#160;&#160;http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_dialog_MIT_title">The MIT License</string>
    <string name="about_dialog_MIT_message">
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:
        \n\n
        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.
        \n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.</string>

    <array name="about_url_array">
        <item>Android Swipe-to-Dismiss</item>
        <item>https://github.com/romannurik/Android-SwipeToDismiss</item>
        <item>Cursor Recycler Adapter</item>
        <item>https://gist.github.com/Shywim/127f207e7248fe48400b</item>
        <item>ZXing</item>
        <item>https://github.com/zxing/zxing</item>
        <item>Android SQLiteAssetHelper</item>
        <item>https://github.com/jgilfelt/android-sqlite-asset-helper</item>
        <item>Guava</item>
        <item>https://github.com/google/guava</item>
        <item>Apache Commons Lang</item>
        <item>https://github.com/apache/commons-lang</item>
        <item>Android Universal Image Loader</item>
        <item>https://github.com/nostra13/Android-Universal-Image-Loader</item>
        <item>Floating Action Button</item>
        <item>https://github.com/makovkastar/FloatingActionButton</item>
        <item>Material Edit Text</item>
        <item>https://github.com/rengwuxian/MaterialEditText</item>
        <item>Slidr</item>
        <item>https://github.com/r0adkll/Slidr</item>
        <item>ShowcaseView</item>
        <item>https://github.com/amlcurran/ShowcaseView</item>
    </array>
    <string name="license_text">Third-party libraries in use for this project were released under the following licenses:</string>
    <!-- Empty view widget -->
    <string name="empty_view_widget_active_label">There\'s nothing here yet&#8230;</string>
    <string name="empty_view_widget_active_button">Add a new item</string>
    <string name="error_no_text">Name cannot be empty</string>
    <string name="error_text_too_long">Entered name is too long.</string>
    <string name="error_only_spaces">Name should not contain spaces only</string>
    <string name="text_configured">"Currently configured as "</string>
    <string name="text_daily">Daily</string>
    <string name="text_weekly">Weekly</string>
    <string name="no_date_set">No Date Set</string>

</resources>
