<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_top_text_size"
                android:gravity="center_horizontal"
                android:text="@string/about_information_text"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_text_size"
                android:linksClickable="true"
                android:autoLink="email"
                android:gravity="center_horizontal"
                android:text="@string/about_email"/>
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_text_size"
                android:gravity="center_horizontal"
                android:text="@string/about_github"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_text_size"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/about_github_url"
                android:gravity="center_horizontal" />
            <View
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="100dp"
                android:layout_height="@dimen/edit_divider_height"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_text_size"
                android:gravity="center_horizontal"
                android:text="@string/license_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/view_Apache_license_btn"
                    android:layout_width="@dimen/about_view_button_width"
                    android:layout_height="@dimen/about_view_button_height"
                    android:background="@drawable/ripple_primary_dark_button"
                    android:layout_alignParentStart="true"
                    android:text="Apache 2.0"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/activity_vertical_margin"/>
                <Button
                    android:id="@+id/view_MIT_license_btn"
                    android:layout_toRightOf="@+id/view_Apache_license_btn"
                    android:layout_width="@dimen/about_view_button_width"
                    android:layout_height="@dimen/about_view_button_height"
                    android:background="@drawable/ripple_primary_dark_button"
                    android:text="MIT"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/about_top_text_size"
                android:gravity="center_horizontal"
                android:text="@string/about_information_libraries"/>

            <LinearLayout
                android:id="@+id/url_holder_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fadeScrollbars="false">
                <LinearLayout
                    android:id="@+id/url_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>